fix(travel-service): resolve SonarQube code smells (17/20, 3 kept/reverted)
- 5 string constants extracted (destinationId/checkIn/checkOut in
  AccommodationRepository, destinationId in ActivityRepository,
  departureTime/arrivalTime in TransportRepository) — S1192, map-key
  literals only, Cypher text and binding logic untouched.
- 3 `record` lambda params (a Java contextual keyword) renamed to `row`
  across the same three repositories — S6213.
- Destination.java / DestinationService.java: OffsetDateTime.now() ->
  now(ZoneOffset.UTC) for createdAt/deletedAt, matching the ZoneOffset.UTC
  convention already used in DashboardService.java (S8688).
- 5x Collectors.toList() -> toList() in DestinationService/TransportService
  (S6204) — verified every caller only reads the result (ResponseEntity.ok
  or straight into a DTO constructor), never mutates it.
- TransportGraphIntegrationTest: chained two containsEntry assertions on the
  same subject into one (S5853).

Deliberately left:
- DestinationResponse's 9-param constructor (S107): no Money/date-range
  value type exists elsewhere in this service to reuse; it's a
  frontend-consumed DTO where every field is a distinct real attribute —
  splitting it would be an artificial abstraction with no domain meaning.
- Neo4jSchemaInitializerTest `throws Exception` (S1130): removing it breaks
  the build — CommandLineRunner.run(String...) declares `throws Exception`
  and the test calls it directly as a statement, so the clause is required.
  Stale/mistaken Sonar finding; reverted after test-compile failed.